--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <button type="submit" onclick="window.location.href='S3/IPG.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     IPG-S3
                 </button> 
+                <button type="submit" onclick="window.location.href='S3/SP.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    SP-S3
+                </button> 
                 <button type="submit" onclick="window.location.href='S3/Info.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     MIAGE-S3
                   </button>                    
