--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <button type="submit" onclick="window.location.href='S3/IPG.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     IPG-S3
                 </button> 
+                <button type="submit" onclick="window.location.href='S4/IPG.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    IPG-S4
+                </button> 
                 <button type="submit" onclick="window.location.href='S3/SP.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     SP-S3
                 </button> 
@@ -63,6 +66,9 @@
             </div>
             <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700">
                 <h5 class="mb-3 text-xl font-medium text-gray-900 dark:text-white">Licence 3</h5>
+                <button type="submit" onclick="window.location.href='S5/IPG.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    IPG-S5
+                </button> 
                 <button type="submit" onclick="window.location.href='S5/miage.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     MIAGE-S5
                 </button>   
