--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <button type="submit" onclick="window.location.href='S3/EEA.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     EEA-S3
                 </button> 
+                <button type="submit" onclick="window.location.href='S4/EEA.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    EEA-S4
+                </button>
                 <button type="submit" onclick="window.location.href='S3/TSER.html';" class="mb-3 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     TSER-S3
                 </button> 
